# fsm-designer

./: pyproject.toml
src/: cli.py  desktop_server.py  main.py
src/analysis/: advanced_analyzer.py  analyzer.py  logic.py
src/api/: fsm_builder.py  main.py  schemas.py  simulator.py
src/core/: fsm.py  serializer.py  signal.py  state.py  transition.py
src/fsm_verilog_designer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/generator/: verilog_generator.py
src/parser/: ast_utils.py  fsm_extractor.py  verilog_parser.py
src/visualization/: dot_exporter.py  graph_builder.py
tests/: test_api.py  test_core_and_generator.py  test_verilog_parser.py
ui/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js  index.css  main.jsx
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src/components/: ActionsDialogEditor.jsx  ConditionBuilder.jsx  EdgeEditor.jsx  ErrorBoundary.jsx  ErrorsPanel.jsx  ExpressionBuilder.jsx  GraphEditor.jsx  MonacoCodeEditor.jsx  NodeEditor.jsx  Sidebar.jsx  SimulationPanel.jsx  StructuredActionsEditor.jsx  VerilogView.jsx
ui/src/components/ui/: accordion.jsx  badge.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  select.jsx  separator.jsx  tabs.jsx  textarea.jsx
ui/src/lib/: editorModel.js  fsmModel.js  testbenchModel.js
ui/src/store/: fsmStore.js
